# utils_xsarslc_l1b

./: .gitignore  README.md  cwave_parameters_computation_example.ipynb  environment.yml  get_polygons_from_l1b.py  pyproject.toml  raster_readers.py
.github/workflows/: ci.yaml  publish.yml
assests/: LOPS_WW3-GLOB-30M_202302_trck.nc
ci/requirements/: docs.yaml  environment.yaml
coloc/: coloc.py
compute/: compute_from_l1b.py  cwave.py  macs.py
docs/: atbd.rst  basic_api.rst  conf.py  cwave.rst  index.rst  installing.rst
docs/examples/: display_a_IW_L1B_xspectra.ipynb  do_L1C_SAFE_from_L1B_SAFE_example.ipynb  plotting_L1B_geometry_with_holoview_example.ipynb  plotting_L1B_variables_with_holoview_example.ipynb
examples/: plotting_L1B_geometry_with_holoview_example.ipynb
high-level-tests/: do_L1C_SAFE_from_L1B_SAFE.py
l1butils/: __init__.py  compute_from_l1b.py  config.yaml  cwave.py  cwave_parameters_computation_example.ipynb  do_L1C_SAFE_from_L1B_SAFE_example.ipynb  get_config.py  get_polygons_from_l1b.py  raster_readers.py  spectrum_clockwise_to_trigo.py  symmetrize_l1b_spectra.py  utils.py
l1butils/coloc/: coloc.py
l1butils/compute/: compute_from_l1b.py  cwave.py  macs.py  stack_iw_l1b.py
l1butils/plotting/: add_azimuth_cutoff_lines_on_polar_spec_fig.py  display_one_spectra.py  display_xspectra_grid.py  get_polygones_from_l1b.py  plotting_L1B_variables_with_holoview_example.ipynb  spectra_plot_circles_wavenumbers.py
l1butils/scripts/: do_L1C_SAFE_from_L1B_SAFE.pbs  do_L1C_SAFE_from_L1B_SAFE.py  do_WV_L1C_SAFE_from_L1B_SAFE.pbs  do_WV_L1C_SAFE_from_L1B_SAFE.py
plotting/: get_polygones_from_l1b.py  get_polygons_from_l1b.py  mapping_variables.py  plotting_L1B_geometry_with_holoview_example.ipynb
slcl1butils/: BXX_description.yml  __init__.py  config.yaml  conversion_polar_cartesian.py  get_config.py  get_polygons_from_l1b.py  raster_readers.py  spectrum_clockwise_to_trigo.py  spectrum_rotation.py  symmetrize_l1b_spectra.py  utils.py
slcl1butils/coloc/: coloc.py  coloc_IW_WW3spectra.py  coloc_WV_WW3spectra.py  coloc_XSP_with_GRD.py
slcl1butils/compute/: compute_from_l1b.py  cwave.py  homogeneous_output.py  macs.py  stack_iw_l1b.py  stack_wv_l1c_monthly.py
slcl1butils/legacy_ocean/ocean/: xPolarSpectrum.py  xspectrum.py
slcl1butils/legacy_ocean/ocean/spectrum_private/: spectra_functions.py
slcl1butils/plotting/: add_azimuth_cutoff_lines_on_polar_spec_fig.py  display_one_spectra.py  display_xspectra_grid.py  quadmeshgeoviewsL1B.py  spectra_plot_circles_wavenumbers.py  wallpaper.py
slcl1butils/scripts/: do_IW_L1C_SAFE_from_L1B_SAFE.pbs  do_IW_L1C_SAFE_from_L1B_SAFE.py  do_IW_L1C_SAFE_from_L1B_SAFE_prun.py  do_WV_L1C_SAFE_from_L1B_SAFE.pbs  do_WV_L1C_SAFE_from_L1B_SAFE.py  do_WV_L1C_SAFE_from_L1B_SAFE_prun.py
slcl1butils/tests/: test_do_WV_L1C_SAFE.py  test_find_closest_ww3sp.py  test_output_filename_l1c.py  test_output_path.py  test_resampling.py
