[project]
name = "slcl1butils"
requires-python = ">= 3.9"
description = "Python library to exploit SAR IFREMER L1B products"
readme.file = "README.md"
readme.content-type = "text/markdown"
license = {text = "GPL-3.0"}
keywords = ["SAR", "wave", "reseach", "cross-spectra"]
authors = [
  {name = "Alexis Mouche"}
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "xarray",
    "numpy",
    "netCDF4",
    "shapely",
    "xarray-datatree",
    "importlib_resources",
    'tqdm'
]
dynamic = ["version"]

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["slcl1butils"]

[tool.setuptools_scm]
fallback_version = "999"

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = true
default_section = "THIRDPARTY"
known_first_party = "slcl1butils"

[project.scripts]
do_IW_L1C_SAFE_from_L1B_SAFE = "slcl1butils.scripts.do_IW_L1C_SAFE_from_L1B_SAFE:main"
do_WV_L1C_SAFE_from_L1B_SAFE = "slcl1butils.scripts.do_WV_L1C_SAFE_from_L1B_SAFE:main"
stack_WV_L1C_to_ZARR = 'slcl1butils.compute.stack_wv_l1c_monthly:main'