[project]
name = "slcl1butils"
requires-python = ">= 3.9"
description = "Python library to exploit SAR IFREMER L1B products"
readme.file = "README.md"
readme.content-type = "text/markdown"
license = {text = "GPL-3.0"}
keywords = ["SAR", "wave", "reseach", "cross-spectra"]
authors = [
  {name = "Alexis Mouche"}
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'PyYAML',
    "xarray",
    "numpy",
    "netCDF4",
    "shapely",
    'tqdm',
    "zarr",
    'fsspec',
    'matplotlib',
    'scipy',
    'aiohttp',
    'holoviews',
    'geoviews',
    'dask',
    'rioxarray'
]
dynamic = ["version"]

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["slcl1butils"]

[tool.setuptools_scm]
fallback_version = "999"

[project.scripts]
do_IW_L1C_SAFE_from_L1B_SAFE = "slcl1butils.scripts.do_IW_L1C_SAFE_from_L1B_SAFE:main"
do_WV_L1C_SAFE_from_L1B_SAFE = "slcl1butils.scripts.do_WV_L1C_SAFE_from_L1B_SAFE:main"
stack_WV_L1C_monthly = 'slcl1butils.compute.stack_wv_l1c_monthly:main'

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = true
default_section = "THIRDPARTY"
known_first_party = "slcl1butils"

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING"]

[tool.ruff.lint]
ignore = [
  "E402",  # module level import not at top of file
  "E501",  # line too long - let black worry about that
  "E731",  # do not assign a lambda expression, use a def
  "UP038", # type union instead of tuple for isinstance etc
]
select = [
  "F",   # Pyflakes
  "E",   # Pycodestyle
  "I",   # isort
  "UP",  # Pyupgrade
  "TID", # flake8-tidy-imports
  "W",
]
extend-safe-fixes = [
  "TID252", # absolute imports
  "UP031",  # percent string interpolation
]
fixable = ["I", "TID252", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["safe_s1"]
known-third-party = ["xarray", "toolz", "construct"]

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"
